# llm-gateway

./: .env.example  .gitignore  Makefile  build_status.json  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/api/: __init__.py
app/api/v1/: admin.py  chat.py
app/cache/: __init__.py  semantic_cache.py
app/core/: __init__.py  dispatcher.py  router.py  streaming.py
app/models/: __init__.py  request.py  response.py
app/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
app/tracking/: __init__.py  metrics.py  token_tracker.py
tests/: __init__.py  conftest.py  test_dispatcher.py  test_providers.py  test_router.py  test_scaffold.py
