[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-gateway"
version = "0.1.0"
description = "Async LLM Gateway with Semantic Cache & Cost Routing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis[asyncio]>=5.2.0",
    "sentence-transformers>=3.3.0",
    "numpy>=2.2.0",
    "structlog>=25.0.0",
    "prometheus-client>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "fakeredis>=2.26.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "coverage>=7.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
